--- a/.github/workflows/PR-4.x.yaml
+++ b/.github/workflows/PR-4.x.yaml
@@ -15,8 +15,8 @@ jobs:
   Ubuntu2004-x64:
     uses: opencv/ci-gha-workflow/.github/workflows/OCV-PR-4.x-U20.yaml@main
 
-#  Ubuntu2004-x64-OpenVINO:
-#    uses: opencv/ci-gha-workflow/.github/workflows/OCV-PR-4.x-U20-OpenVINO.yaml@main
+  Ubuntu2004-x64-OpenVINO:
+    uses: asmorkalov/ci-gha-workflow/.github/workflows/OCV-PR-4.x-U20-OpenVINO.yaml@as/openvino_group_fix
 
   Ubuntu2204-x64:
     uses: opencv/ci-gha-workflow/.github/workflows/OCV-PR-4.x-U22.yaml@main
