set_classes_file_to_exist_file

--- a/samples/dnn/models.yml
+++ b/samples/dnn/models.yml
@@ -189,5 +189,5 @@ fcnresnet101:
   width: 500
   height: 500
   rgb: false
-  classes: "pascal-voc-classes.txt"
+  classes: "object_detection_classes_pascal_voc.txt"
   sample: "segmentation"
