--- a/samples/dnn/models.yml
+++ b/samples/dnn/models.yml
@@ -21,7 +21,7 @@ opencv_fd:
 # YOLO4 object detection family from Darknet (https://github.com/AlexeyAB/darknet)
 # YOLO object detection family from Darknet (https://pjreddie.com/darknet/yolo/)
 # Might be used for all YOLOv2, TinyYolov2, YOLOv3, YOLOv4 and TinyYolov4
-yolo:
+yolov4:
   load_info:
     url: "https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights"
     sha1: "0143deb6c46fcc7f74dd35bf3c14edc3784e99ee"
@@ -47,6 +47,20 @@ yolov4-tiny:
   height: 416
   rgb: true
   classes: "object_detection_classes_yolov4.txt"
+  sample: "object_detection"
+
+yolov3:
+  load_info:
+    url: "https://pjreddie.com/media/files/yolov3.weights"
+    sha1: "520878f12e97cf820529daea502acca380f1cb8e"
+  model: "yolov3.weights"
+  config: "yolov3.cfg"
+  mean: [0, 0, 0]
+  scale: 0.00392
+  width: 416
+  height: 416
+  rgb: true
+  classes: "object_detection_classes_yolov3.txt"
   sample: "object_detection"
 
 tiny-yolo-voc:
