--- a/modules/core/CMakeLists.txt
+++ b/modules/core/CMakeLists.txt
@@ -1,21 +1,21 @@
 set(the_description "The Core Functionality")
 
-ocv_add_dispatched_file(mathfuncs_core SSE2 AVX AVX2)
-ocv_add_dispatched_file(stat SSE4_2 AVX2)
-ocv_add_dispatched_file(arithm SSE2 SSE4_1 AVX2 VSX3)
-ocv_add_dispatched_file(convert SSE2 AVX2 VSX3)
-ocv_add_dispatched_file(convert_scale SSE2 AVX2)
-ocv_add_dispatched_file(count_non_zero SSE2 AVX2)
-ocv_add_dispatched_file(has_non_zero SSE2 AVX2)
-ocv_add_dispatched_file(matmul SSE2 SSE4_1 AVX2 AVX512_SKX NEON_DOTPROD)
-ocv_add_dispatched_file(mean SSE2 AVX2)
-ocv_add_dispatched_file(merge SSE2 AVX2)
-ocv_add_dispatched_file(split SSE2 AVX2)
-ocv_add_dispatched_file(sum SSE2 AVX2)
+ocv_add_dispatched_file(mathfuncs_core SSE2 AVX AVX2 LASX)
+ocv_add_dispatched_file(stat SSE4_2 AVX2 LASX)
+ocv_add_dispatched_file(arithm SSE2 SSE4_1 AVX2 VSX3 LASX)
+ocv_add_dispatched_file(convert SSE2 AVX2 VSX3 LASX)
+ocv_add_dispatched_file(convert_scale SSE2 AVX2 LASX)
+ocv_add_dispatched_file(count_non_zero SSE2 AVX2 LASX)
+ocv_add_dispatched_file(has_non_zero SSE2 AVX2 LASX )
+ocv_add_dispatched_file(matmul SSE2 SSE4_1 AVX2 AVX512_SKX NEON_DOTPROD LASX)
+ocv_add_dispatched_file(mean SSE2 AVX2 LASX)
+ocv_add_dispatched_file(merge SSE2 AVX2 LASX)
+ocv_add_dispatched_file(split SSE2 AVX2 LASX)
+ocv_add_dispatched_file(sum SSE2 AVX2 LASX)
 
 # dispatching for accuracy tests
 ocv_add_dispatched_file_force_all(test_intrin128 TEST SSE2 SSE3 SSSE3 SSE4_1 SSE4_2 AVX FP16 AVX2 AVX512_SKX)
-ocv_add_dispatched_file_force_all(test_intrin256 TEST AVX2 AVX512_SKX)
+ocv_add_dispatched_file_force_all(test_intrin256 TEST AVX2 AVX512_SKX LASX)
 ocv_add_dispatched_file_force_all(test_intrin512 TEST AVX512_SKX)
 
 
