Add XROS define to mean VISIONOS or VISIONSIMULATOR

--- a/modules/objc/generator/CMakeLists.txt
+++ b/modules/objc/generator/CMakeLists.txt
@@ -69,7 +69,7 @@ string(REPLACE "opencv_" "" MODULES "${OPENCV_OBJC_MODULES}")
 if(NOT DEFINED OPENCV_OBJC_TARGET AND APPLE_FRAMEWORK)
   if(IOS)
     set(OPENCV_OBJC_TARGET "ios")
-  elseif(VISIONOS)
+  elseif(XROS)
     set(OPENCV_OBJC_TARGET "visionos")
   else()
     set(OPENCV_OBJC_TARGET "osx")
