AAR package build and test with CI
- Use the same tools and plugins for SDK build and AAR build
- Added script to test Gradle-based samples against local maven repo
- Various local fixes and debug prints

--- a/samples/android/camera-calibration/build.gradle.in
+++ b/samples/android/camera-calibration/build.gradle.in
@@ -29,8 +29,10 @@ android {
 dependencies {
     //implementation fileTree(dir: 'libs', include: ['*.jar'])
     if (gradle.opencv_source == "sdk_path") {
+        println 'Using OpenCV from SDK'
         implementation project(':opencv')
     } else if (gradle.opencv_source == "maven_local" || gradle.opencv_source == "maven_cenral") {
+        println 'Using OpenCV from Maven repo'
         implementation 'org.opencv:opencv:@OPENCV_VERSION_PLAIN@'
     }
 }
