--- a/samples/android/CMakeLists.txt
+++ b/samples/android/CMakeLists.txt
@@ -8,6 +8,7 @@ ocv_warnings_disable(CMAKE_CXX_FLAGS -Wmissing-declarations)
 
 add_subdirectory(15-puzzle)
 add_subdirectory(face-detection)
+add_subdirectory(qr-detection)
 add_subdirectory(image-manipulations)
 add_subdirectory(camera-calibration)
 add_subdirectory(color-blob-detection)
