Fix build for Android sample mobilenet-ssd detector.

--- a/samples/android/CMakeLists.txt
+++ b/samples/android/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(qr-detection)
 add_subdirectory(image-manipulations)
 add_subdirectory(camera-calibration)
 add_subdirectory(color-blob-detection)
+add_subdirectory(mobilenet-objdetect)
 add_subdirectory(tutorial-1-camerapreview)
 add_subdirectory(tutorial-2-mixedprocessing)
 add_subdirectory(tutorial-3-cameracontrol)
