--- a/samples/android/mobilenet-objdetect/gradle/AndroidManifest.xml
+++ b/samples/android/mobilenet-objdetect/gradle/AndroidManifest.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.opencv.samples.opencv_mobilenet"
->
+          package="org.opencv.samples.opencv_mobilenet">
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">  <!--Full screen mode-->
+        android:icon="@drawable/icon">
+
         <activity
                   android:exported="true"
                   android:name=".MainActivity"
