--- a/samples/android/qr-detection/gradle/AndroidManifest.xml
+++ b/samples/android/qr-detection/gradle/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.opencv.samples.qrdetection"
->
+    package="org.opencv.samples.qrdetection">
 
     <application
         android:icon="@drawable/icon"
