--- a/modules/java/android_sdk/android_gradle_lib/build.gradle
+++ b/modules/java/android_sdk/android_gradle_lib/build.gradle
@@ -18,7 +18,7 @@ android {
         externalNativeBuild {
             cmake {
                 arguments "-DANDROID_STL=@ANDROID_STL@"
-                targets "opencv_jni_shared"
+                targets "opencv_java4"
             }
         }
     }
