--- a/modules/java/android_sdk/libcxx_helper/CMakeLists.txt
+++ b/modules/java/android_sdk/libcxx_helper/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.6)
 
+project(opencv_java4)
+
 # dummy target to bring libc++_shared.so into packages
-add_library(opencv_jni_shared STATIC dummy.cpp)
+add_library(opencv_java4 STATIC dummy.cpp)
