--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -910,13 +910,11 @@ foreach(hal ${OpenCV_HAL})
       ocv_hal_register(CAROTENE_HAL_LIBRARIES CAROTENE_HAL_HEADERS CAROTENE_HAL_INCLUDE_DIRS)
 
       if( NOT DEFINED CAROTENE_NEON_ARCH)
-          set(CAROTENE_NEON_MSG "Auto")
-      elseif( CAROTENE_NEON_ARCH EQUAL 8)
-          set(CAROTENE_NEON_MSG "Force ARMv8")
-      elseif( CAROTENE_NEON_ARCH EQUAL 7)
-          set(CAROTENE_NEON_MSG "Force ARMv7")
+          set(CAROTENE_NEON_MSG "Auto detected")
+      elseif( CAROTENE_NEON_ARCH GREATER 7)
+          set(CAROTENE_NEON_MSG "Force ARMv8+")
       else()
-          set(CAROTENE_NEON_MSG "Force ARMv7-Legacy")
+          set(CAROTENE_NEON_MSG "Force ARMv7")
       endif()
       list(APPEND OpenCV_USED_HAL "carotene (ver ${CAROTENE_HAL_VERSION}, ${CAROTENE_NEON_MSG})")
     else()
