Fixed typo in Android build scripts.

--- a/samples/android/15-puzzle/build.gradle.in
+++ b/samples/android/15-puzzle/build.gradle.in
@@ -31,7 +31,7 @@ dependencies {
     if (gradle.opencv_source == 'sdk_path') {
         println 'Using OpenCV from SDK'
         implementation project(':opencv')
-    } else if (gradle.opencv_source == 'maven_local' || gradle.opencv_source == 'maven_cenral') {
+    } else if (gradle.opencv_source == 'maven_local' || gradle.opencv_source == 'maven_central') {
         println 'Using OpenCV from Maven repo'
         implementation 'org.opencv:opencv:@OPENCV_VERSION_PLAIN@'
     }
