--- a/samples/android/qr-detection/build.gradle.in
+++ b/samples/android/qr-detection/build.gradle.in
@@ -30,7 +30,7 @@ dependencies {
     //implementation fileTree(dir: 'libs', include: ['*.jar'])
     if (gradle.opencv_source == "sdk_path") {
         implementation project(':opencv')
-    } else if (gradle.opencv_source == "maven_local" || gradle.opencv_source == "maven_cenral") {
+    } else if (gradle.opencv_source == "maven_local" || gradle.opencv_source == "maven_central") {
         implementation 'org.opencv:opencv:@OPENCV_VERSION_PLAIN@'
     }
 }
