Fix for review, short license header, CV_Check(), ...
- Use short license header
- Use CV_Check*() macro instead of CV_Assert()
- To CI test, force to use internal(opencv) qoi.h if external(system) qoi.h is missing.

Fix for C2121/C2059 compile errors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -232,7 +232,7 @@ OCV_OPTION(BUILD_JPEG               "Build libjpeg from source"          (WIN32 
 OCV_OPTION(BUILD_PNG                "Build libpng from source"           (WIN32 OR ANDROID OR APPLE OR OPENCV_FORCE_3RDPARTY_BUILD) )
 OCV_OPTION(BUILD_OPENEXR            "Build openexr from source"          (OPENCV_FORCE_3RDPARTY_BUILD) )
 OCV_OPTION(BUILD_WEBP               "Build WebP from source"             (((WIN32 OR ANDROID OR APPLE) AND NOT WINRT) OR OPENCV_FORCE_3RDPARTY_BUILD) )
-OCV_OPTION(BUILD_QOI                "Build qoi from source"              (OPENCV_FORCE_3RDPARTY_BUILD) )
+OCV_OPTION(BUILD_QOI                "Build QOI from source"              (OPENCV_FORCE_3RDPARTY_BUILD) )
 OCV_OPTION(BUILD_TBB                "Download and build TBB from source" (ANDROID OR OPENCV_FORCE_3RDPARTY_BUILD) )
 OCV_OPTION(BUILD_IPP_IW             "Build IPP IW from source"           (NOT MINGW OR OPENCV_FORCE_3RDPARTY_BUILD) IF (X86_64 OR X86) AND NOT WINRT )
 OCV_OPTION(BUILD_ITT                "Build Intel ITT from source"
@@ -437,7 +437,7 @@ OCV_OPTION(WITH_GDAL "Include GDAL Support" OFF
   VISIBLE_IF NOT ANDROID AND NOT IOS AND NOT XROS AND NOT WINRT
   VERIFY HAVE_GDAL)
 OCV_OPTION(WITH_QOI "Include QOI Support" OFF
-  VISIBLE_IF NOT ANDROID AND NOT IOS AND NOT XROS AND NOT WINRT
+  VISIBLE_IF TRUE
   VERIFY HAVE_QOI)
 OCV_OPTION(WITH_GPHOTO2 "Include gPhoto2 library support" OFF
   VISIBLE_IF UNIX AND NOT ANDROID AND NOT IOS AND NOT XROS
