For CI test, default WITH_QOI is ON (Temporary)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -436,7 +436,7 @@ OCV_OPTION(WITH_MFX "Include Intel Media SDK support" OFF
 OCV_OPTION(WITH_GDAL "Include GDAL Support" OFF
   VISIBLE_IF NOT ANDROID AND NOT IOS AND NOT XROS AND NOT WINRT
   VERIFY HAVE_GDAL)
-OCV_OPTION(WITH_QOI "Include QOI Support" OFF
+OCV_OPTION(WITH_QOI "Include QOI Support" ON
   VISIBLE_IF TRUE
   VERIFY HAVE_QOI)
 OCV_OPTION(WITH_GPHOTO2 "Include gPhoto2 library support" OFF
