--- a/modules/java/test/android_test/settings.gradle
+++ b/modules/java/test/android_test/settings.gradle
@@ -1,6 +1,6 @@
 rootProject.name = 'android_test'
 
 include ':opencv'
-project(':opencv').projectDir = new File('D:\\Android\\opencv-4.9.0-android-sdk_orig\\OpenCV-android-sdk\\sdk')
+project(':opencv').projectDir = new File('../opencv_android/opencv')
 
 include ':tests_module'
